@@ -1,12 +1,8 @@
 /*
  * DMI Decode
  *
- *      (C) 2000-2002 Alan Cox <alan@redhat.com>
- *      (C) 2002-2003 Jean Delvare <khali@linux-fr>
- *
- *
- * Licensed under the GNU Public license. If you want to use it in with
- * another license just ask.
+ *   (C) 2000-2002 Alan Cox <alan@redhat.com>
+ *   (C) 2002-2003 Jean Delvare <khali@linux-fr>
  *
  *   This program is free software; you can redistribute it and/or modify
  *   it under the terms of the GNU General Public License as published by
@@ -55,17 +51,13 @@
 #include <fcntl.h>
 #include <string.h>
 #include <stdlib.h>
-#include <errno.h>
 
 #include "version.h"
+#include "types.h"
+#include "util.h"
 
 static const char *out_of_spec = "<OUT OF SPEC>";
 static const char *bad_index = "<BAD INDEX>";
-
-typedef unsigned char u8;
-typedef unsigned short u16;
-typedef signed short i16;
-typedef unsigned int u32;
 
 /*
  * The specification isn't very clear on endianness problems, so we better
@@ -145,40 +137,6 @@ struct dmi_header
 #define HANDLE(x) x->handle
 #endif
 
-/*
- * Tools
- */
-
-static int myread(int fd, u8 *buf, size_t count, const char *prefix)
-{
-	ssize_t r=1;
-	size_t r2=0;
-	
-	while(r2!=count && r!=0)
-	{
-		r=read(fd, buf+r2, count-r2);
-		if(r==-1)
-		{
-			if(errno!=EINTR)
-			{
-				close(fd);
-				perror(prefix);
-				return -1;
-			}
-		}
-		else
-			r2+=r;
-	}
-	
-	if(r2!=count)
-	{
-		close(fd);
-		fprintf(stderr, "%s: Unexpected end of file\n", prefix);
-		return -1;
-	}
-	
-	return 0;
-}
 
 /*
  * Type-independant Stuff
@@ -3850,15 +3808,6 @@ static void dmi_table(int fd, u32 base, u16 len, u16 num, u16 ver, const char *p
 	free(buf);
 }
 
-
-static int checksum(u8 *buf, u8 len)
-{
-	u8 sum=0, a;
-	
-	for(a=0; a<len; a++)
-		sum+=buf[a];
-	return (sum==0);
-}
 
 int main(int argc, const char *argv[])
 {
