@@ -1,0 +1,7 @@
+#ifndef TYPES_H
+#define TYPES_H
+typedef unsigned char u8;
+typedef unsigned short u16;
+typedef signed short i16;
+typedef unsigned int u32;
+#endif
